# pulsar-neuron-repo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: defaults.yaml  markets.yaml  prompts.yaml
data/: symbols.txt
db/migrations/: 0001_init_ohlcv.sql  0002_fut_oi.sql  0003_option_chain.sql  0004_breadth_vix.sql  0005_baselines_ib.sql  0006_context_pack.sql  0007_decisions.sql  0008_indexes_partitions.sql
db/seed/: sample_symbols.sql
docs/: Architecture_PostgresOnly.md  Commit_Plan.txt  ERD_Core_Postgres.md  Intraday_Swimlane_09_00_to_10_30.md  Readiness_Checklist.md  Runbook_Daily_IST.md  Spreadsheet_to_Repo_Mapping.md
infra/iam/: README.md  policy-aws-secrets-manager.json  policy-aws-ssm-parameter-store.json
src/pandas/: __init__.py
src/pulsar_neuron/: __init__.py  db.py  normalize.py  timeutils.py
src/pulsar_neuron/agentic/: __init__.py  chooser.py  decision.py  decision_fmt.py  planner.py  planner_llm.py  tool_runner.py  verifier.py
src/pulsar_neuron/cli/: __init__.py  advisory.py  check_kite_token.py  db_init.py  db_smoke.py  live_bars.py  monitor_daemon.py  oi_to_db.py  options_to_db.py  replay.py  (+5 more)
src/pydantic/: __init__.py
tests/: conftest.py  test_agent_index.py  test_agentic_skeleton.py  test_analysis_setups.py  test_data_feeds.py  test_exec_kite.py  test_features.py  test_features_full.py  test_features_index_ctx.py  test_features_indicators.py  test_guard.py  test_guard_enforce.py  test_ingest_jobs.py  test_normalize_and_upsert.py  test_schemas.py  test_strategies_skeleton.py  test_timeutils.py  test_tools_core.py  test_utils_common.py  test_validators.py
(+113 files in other folders)
