[tool.poetry]
name = "pulsar-neuron"
version = "0.2.0"
description = "Deterministic scaffolding for Pulsar Neuron agentic tooling."
authors = ["Abhay <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pulsar_neuron", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.8.0"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
mypy = "^1.11"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
