[tool.poetry]
name = "pulsar-neuron"
version = "0.1.0"
description = "Pulsar Neuron — Postgres-only live market spine (indices, context, strategies)"
authors = ["Abhay Singh <you@example.com>"]
packages = [{ include = "pulsar_neuron", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
