[tool.poetry]
name = "pulsar-neuron"
version = "0.1.0"
description = "Agentic Market Intelligence and Ingestion Framework"
authors = ["Abhay Singh <abhay@example.com>"]
packages = [
    { include = "pulsar_neuron", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9"
boto3 = "^1.40.45"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
